examples/test/testpolicy18444.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18444
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key27: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value21
      podSelector:
        matchLabels:
          key32: value33
          key40: value6
          key46: value9
